# BeagleBone-GPIO

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
src/: am335x.h  gpio.c  gpio.h
